[project]
name = "SciCraft"
version = "0.0.11"
description = "Simplifying Data Science with Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Jeroen van Raak", email = "j.j.f.vanraak@uva.nl" }
]

urls = { "Homepage" = "https://github.com/vanraak/scicraft" }